<resources>
    <string name="app_name">ITIlab10</string>
    <string name="user_id">user id</string>
    <string name="id">Id</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="details">Details</string>
    <string name="get_posts">Get posts</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_back">Welcome back</string>
    <string name="to_continue_login">To continue login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
</resources>