<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:elevation="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp">


        <TextView
            android:id="@+id/txt_post_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="Post id"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/txt_post_id"
            app:layout_constraintTop_toBottomOf="@id/txt_post_id" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/txt_id"
            app:layout_constraintTop_toBottomOf="@id/txt_id" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/txt_name"
            app:layout_constraintTop_toBottomOf="@id/txt_name" />
        <TextView
            android:id="@+id/txt_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/txt_email"
            app:layout_constraintTop_toBottomOf="@id/txt_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>